# x-flux-comfyui

./: CHANGELOG.md  Guide.md  Readme.md  clip.py  hed_workflow.json  layers.py  model_init.py  nodes.py  pyproject.toml  requirements.txt  requirments.txt  sampling.py  setup-py.bat  setup.py  utils.py  未命名.rtf
workflows/: canny_workflow.json  depth_workflow.json  flux-controlnet-canny-v3-workflow.json  flux-controlnet-depth-v3-workflow.json  flux-controlnet-hed-v3-workflow.json  hed_workflow.json  ip_adapter_multiple_inputs_workflow.json  ip_adapter_workflow.json  ipadapter_workflow.json  lora_workflow.json  multi_ip_adapter.json
xflux/src/flux/: math.py  model.py  sampling.py  util.py  xflux_pipeline.py
xflux/src/flux/modules/: layers.py
